# hello-streamlit2

./: LICENSE.txt  README.md  pyproject.toml  requirements.txt
src/hello_streamlit2/: __init__.py  cli.py  main.py
tests/: test_cli.py
